--- a/package.json
+++ b/package.json
@@ -22,11 +22,19 @@
       "title": "Add Room",
       "description": "Add a new meeting room",
       "mode": "view"
+    },
+    {
+      "name": "google-import",
+      "title": "Import from Google Calendar",
+      "description": "Import your Google Calendar events to speed dial",
+      "mode": "view"
     }
   ],
   "dependencies": {
     "@raycast/api": "^1.50.3",
-    "@raycast/utils": "^1.7.1"
+    "@raycast/utils": "^1.7.1",
+    "axios": "^1.4.0",
+    "node-fetch": "^3.3.1"
   },
   "devDependencies": {
     "@raycast/eslint-config": "1.0.5",
